<resources>
    <string name="app_name">Parstagram</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="place_your_description_here">Place your description here</string>
    <string name="take_picture">Take picture</string>
    <string name="submit">Submit</string>
    <string name="user_photo">User photo</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="compose">Compose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_photo">post photo</string>
</resources>