<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_home_24dp"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_compose"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_add_box_24dp"
        android:title="@string/compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_person_outline_24dp"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>